--- a/Somet.html
+++ b/Somet.html
@@ -36,6 +36,6 @@
     </header>
 <h1>Somet</h1>
    <a href="http://steamcommunity.com/id/ysiguus/" target="_blank">Steam</a>
-   <a href="http://steamcommunity.com/id/ysiguus/" target="_blank"><img src="img/steam.jpg" width="150" height="100" alt="Steamin logo"></a>
+   <a href="http://steamcommunity.com/id/ysiguus/" target="_blank"><img src="steam.jpg" width="150" height="100" alt="Steamin logo"></a>
 </body>
 </html>
