--- a/harrastukset.html
+++ b/harrastukset.html
@@ -20,6 +20,6 @@
     <li>Videopelit</li>
     <li>Urheilun seuraaminen</li>
    </ul>
-   <img src="img/mies-uimassa.jpg" width="300" height="300" alt="mies-uimassa">
+   <img src="mies-uimassa.jpg" width="300" height="300" alt="mies-uimassa">
 </body>
 </html>
