--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h2>Itsestäni</h2>
     <p>Olen 24-vuotias tieto- ja viestintätekniikan opiskelija. </p>
     <p>Lempiruokani ovat tortillat.</p>
-    <img src="img/kanatortilla.jpg" width="300" height="250" alt="kuva kanatortillasta">
+    <img src="kanatortilla.jpg" width="300" height="250" alt="kuva kanatortillasta">
     <h2>Opinnot</h2>
     <p>Olen valmistunut aiemmin ajoneuvoasentajaksi mutta se ei ollut kutsuma-ammattini.</p>
     <p>Valmistumisen jälkeen olen työskennellyt lastenhoitajana päiväkodissa muutaman vuoden kunnes päätin lähteä opiskelemaan unelma-ammattiani.</p>
