--- a/harrastukset.html
+++ b/harrastukset.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="inder.html">Etusivu</a>
+            <a href="index.html">Etusivu</a>
             <a href="Somet.html">Somet</a>
         </nav>
     </header>
