--- a/Somet.html
+++ b/Somet.html
@@ -30,7 +30,7 @@
 <body>
     <header>
         <nav>
-            <a href="inder.html">Etusivu</a>
+            <a href="index.html">Etusivu</a>
             <a href="harrastukset.html">Harrastukset</a>
         </nav>
     </header>
