--- a/Somet.html
+++ b/Somet.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="tyylit.css">
     <style>
         body {
-            background-image: url('img/dota2.jpg');
+            background-image: url('dota2.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
